domainagent/kubernetes/existing/older/felinesingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: felines-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: felines.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feline-test-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: feline-test-service
spec:
  selector:
    app: feline-test-app
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feline-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feline-test-app
  template:
    metadata:
      labels:
        app: feline-test-app
    spec:
      containers:
      - name: test-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: feline-html-config
