domainagent/kubernetes/existing/older/felinesingresssalary2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: felines-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: felines.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: salary-predict-service
            port:
              number: 80
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: salary-predict-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: salary-predict-service
spec:
  selector:
    app: salary-predict-app
  ports:
  - port: 80
    targetPort: 8088
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salary-predict-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salary-predict-app
  template:
    metadata:
      labels:
        app: salary-predict-app
    spec:
      imagePullSecrets:
      - name: artifact-registry-secret
      containers:
      - name: salary-predict-container
        image: europe-west2-docker.pkg.dev/aakubecontroller/salary-predictor/model:latest
        ports:
        - containerPort: 8088
        volumeMounts:
        - name: storage-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: local-storage-claim
